--- a/nft-preview-card-component/final/index.html
+++ b/nft-preview-card-component/final/index.html
@@ -49,11 +49,11 @@
         display: flex;
         flex-direction: column;
         margin: 5rem auto;
-        border: 1px solid red;
         border-radius: 5px;
         justify-content: space-between;
         padding: 1.5rem;
         background: hsl(216, 50%, 16%);
+        box-shadow: 0 20px 10px 10px rgb(0 0 0 / 8%);
       }
 
       p {
