--- a/nft-preview-card-component/final/index.html
+++ b/nft-preview-card-component/final/index.html
@@ -28,6 +28,7 @@
         --white: hsl(0, 0%, 100%);
         --cyan: hsl(178, 100%, 50%);
         --transition: 0.3s ease-in-out all;
+        --borderRadius: 0.5rem;
       }
       body {
         box-sizing: border-box;
@@ -49,7 +50,7 @@
         display: flex;
         flex-direction: column;
         margin: 5rem auto;
-        border-radius: 5px;
+        border-radius: 1rem;
         justify-content: space-between;
         padding: 1.5rem;
         background: hsl(216, 50%, 16%);
@@ -61,21 +62,22 @@
         margin: 0;
       }
 
-      .img-container {
+      .img-block {
         padding: 0;
         width: 100%;
         position: relative;
-        border-radius: 0.5rem;
+        border-radius: var(--borderRadius);
         transition: 2s ease-in-out all;
       }
 
-      .img-container::after {
+      .img-block::after {
         position: absolute;
         top: 0;
         bottom: 0;
         left: 0;
         right: 0;
         background: hsla(178, 100%, 50%, 1);
+        border-radius: var(--borderRadius);
         opacity: 0;
         content: "";
         transition: var(
@@ -85,23 +87,14 @@
         */
       }
 
-      .img {
-        display: block; /* Set img from inline to block to make img-container as same size as img  */
+      .img-block__img {
+        display: block; /* Set img from inline to block to make img-block as same size as img  */
         /* https://newbedev.com/why-does-container-div-insist-on-being-slightly-larger-than-img-or-svg-content */
         width: 100%;
         border-radius: 0.5rem;
       }
 
-      .img-overlay {
-        width: 100%;
-        opacity: 0;
-        background: hsla(178, 100%, 50%, 1);
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-
-      .view-icon {
+      .img-block__icon {
         opacity: 0;
         position: absolute;
         top: 50%;
@@ -111,15 +104,15 @@
         transition: var(--transition);
       }
 
-      .img-container:hover::after {
+      .img-block:hover::after {
         opacity: 0.5;
       }
 
-      .img-container:hover .view-icon {
+      .img-block:hover .img-block__icon {
         opacity: 1;
       }
 
-      h1 {
+      .card__title {
         margin: 0;
         color: hsl(0, 0%, 100%);
         font-size: 1.25rem;
@@ -127,36 +120,34 @@
         font-weight: 600;
       }
 
-      h4:hover,
-      .creator a:hover {
+      .card__title:hover,
+      .card__creator-name a:hover {
         color: var(--cyan);
         cursor: pointer;
       }
 
-      .description {
+      .card__description {
         font-size: 18px;
         color: var(--text-color);
         font-weight: 300;
       }
 
-      .currency-and-day {
+      .card__currency-and-day {
         display: flex;
         justify-content: space-between;
       }
 
-      .day {
+      .card__day {
         color: var(--text-color);
         font-weight: 400;
       }
 
-      .currency {
+      .card__currency {
         color: hsl(178, 100%, 50%);
       }
 
-      .currency svg,
-      .currency span,
-      .day svg,
-      .day span {
+      .card__currency > *,
+      .card__day > * {
         vertical-align: middle;
         display: inline-block;
         /* https: //stackoverflow.com/questions/37742099/how-do-you-align-text-with-svg-elements
@@ -164,11 +155,11 @@
          */
       }
 
-      .currency-and-day svg {
+      .card__currency-and-day svg {
         margin-right: 0.35rem;
       }
 
-      .devider {
+      .card__devider {
         border-top: 2px solid #2f415b;
         border-bottom: 0;
         border-left: 0;
@@ -177,19 +168,19 @@
         margin: 0;
       }
 
-      .img-avatar {
+      .card__avatar {
         height: 1.75rem;
         border-radius: 50%;
         border: var(--white) solid 1px;
         vertical-align: middle;
       }
 
-      .creator {
+      .card__creator-name {
         margin-left: 0.5rem;
         vertical-align: middle;
       }
 
-      .creator a {
+      .card__creator-name a {
         color: white;
         text-decoration: none;
       }
@@ -198,13 +189,13 @@
   <body>
     <main>
       <div class="card">
-        <div class="img-container">
+        <div class="img-block">
           <img
-            class="img"
+            class="img-block__img"
             src="images/image-equilibrium.jpg"
             alt="Equilibrium image"
           />
-          <div class="view-icon">
+          <div class="img-block__icon">
             <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
               <g fill="none" fill-rule="evenodd">
                 <path d="M0 0h48v48H0z" />
@@ -217,12 +208,12 @@
             </svg>
           </div>
         </div>
-        <h1>Equilibrium #3429</h1>
-        <p class="description">
+        <h1 class="card__title">Equilibrium #3429</h1>
+        <p class="card__description">
           Our Equilibrium collection promotes balance and calm.
         </p>
-        <div class="currency-and-day">
-          <span class="currency"
+        <div class="card__currency-and-day">
+          <span class="card__currency"
             ><svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z"
@@ -231,7 +222,7 @@
             </svg>
             <span>0.041 ETH</span></span
           >
-          <span class="day"
+          <span class="card__day"
             ><svg width="17" height="17" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z"
@@ -240,14 +231,14 @@
             ><span>3 days left</span></span
           >
         </div>
-        <hr class="devider" />
-        <p>
+        <hr class="card__devider" />
+        <p class="card__creator">
           <img
             src="./images/image-avatar.png"
             alt="avatar"
-            class="img-avatar"
+            class="card__avatar"
           />
-          <span class="creator"
+          <span class="card__creator-name"
             >Creation of <a href="#" title="Jules Wyvern">Jules Wyvern</a></span
           >
         </p>
