change card position

--- a/nft-preview-card-component/final/index.html
+++ b/nft-preview-card-component/final/index.html
@@ -34,6 +34,10 @@
         box-sizing: border-box;
         font-family: "Outfit", sans-serif;
         background: hsl(217, 54%, 11%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
       }
 
       .card {
@@ -41,7 +45,7 @@
         height: 550px;
         display: flex;
         flex-direction: column;
-        margin: 5rem auto;
+        margin: 10 auto;
         border-radius: 1rem;
         justify-content: space-between;
         padding: 1.5rem;
