added js and hover effect

--- a/ping-coming-soon-page/final/index.html
+++ b/ping-coming-soon-page/final/index.html
@@ -30,6 +30,12 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
+      :root {
+        --blue-primary: hsl(223, 100%, 88%);
+        --blue-secondary: hsl(223, 87%, 63%);
+        --transtion: 0.3s ease-in-out all;
+      }
+
       html {
         height: 100%;
       }
@@ -42,7 +48,7 @@
 
       @media screen and (min-width: 640px) {
         body {
-          max-width: 640px;
+          max-width: 600px;
         }
       }
 
@@ -84,48 +90,93 @@
         display: grid;
         grid-template-columns: 90%;
         justify-content: center;
-        gap: 10px;
+        align-items: center;
+        gap: 8px;
         width: 100%;
       }
 
       @media screen and (min-width: 640px) {
         .form {
           grid-template-columns: 2fr 1fr;
+          grid-template-rows: auto;
+          height: 100px;
+          align-content: start;
+          padding-top: 10px;
         }
       }
 
       .form__input,
       .form__button {
-        border-radius: 20px;
-        height: 40px;
+        border-radius: 26px;
+        height: 46px;
+        box-sizing: border-box;
       }
 
       .form__input {
-        border: 1px solid hsl(223, 100%, 88%);
+        border: 1px solid var(--blue-primary);
         padding-left: 30px;
       }
 
+      .form__input--error {
+        border: 1px solid red;
+      }
+
       .form__input::placeholder {
-        color: hsl(223, 100%, 88%);
+        color: var(--blue-primary);
       }
 
       .form__input:focus {
         outline: none;
+        background: var(--blue-primary);
       }
 
       .form__button {
         border: none;
-        background: hsl(223, 87%, 63%);
+        background: var(--blue-secondary);
         color: white;
         font-weight: 600;
         box-shadow: 0 6px 10px 1px hsla(223, 87%, 63%, 0.3);
+        margin-top: 8px;
+        transition: var(--transtion);
+      }
+
+      .form__button:hover {
+        background: hsl(223, 94%, 68%);
+        cursor: pointer;
+      }
+
+      .form__error {
+        color: red;
+        font-style: italic;
+        font-size: 12px;
+        padding-bottom: 10px;
+        display: none;
+      }
+
+      @media screen and (min-width: 640px) {
+        .form__input {
+          grid-column: 1 / span 1;
+        }
+
+        .form__button {
+          grid-column: 2 / span 2;
+          margin: 0;
+        }
+
+        .form__error {
+          height: 30px;
+          visibility: hidden;
+          grid-row: 2 / span 1;
+          justify-self: start;
+          padding-left: 30px;
+        }
       }
 
       .img {
         display: block;
         width: 100%;
-        margin-top: 60px;
-        margin-bottom: 60px;
+        margin-top: 50px;
+        margin-bottom: 50px;
       }
 
       .footer {
@@ -146,8 +197,12 @@
       }
 
       .footer_social-icon .fab {
-        color: hsl(223, 87%, 63%);
-        /* font-size: 20px; */
+        color: var(--blue-secondary);
+        transition: var(--transtion);
+      }
+
+      .footer_social-icon .fab:hover {
+        color: white;
       }
 
       .footer_social-icon .icon_wrap {
@@ -155,11 +210,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 1px solid hsl(223, 100%, 88%);
+        border: 1px solid var(--blue-primary);
         height: 28px;
         width: 28px;
         border-radius: 50%;
         padding: 2px;
+        transition: var(--transtion);
+      }
+
+      .footer_social-icon .icon_wrap:hover {
+        background: var(--blue-secondary);
+        border: none;
       }
 
       .copyright {
@@ -194,6 +255,8 @@
             type="text"
             placeholder="Your email address"
           />
+
+          <span class="form__error">Please provide a valid email address</span>
           <button class="form__button">Notify Me</button>
         </form>
         <img
@@ -217,5 +280,25 @@
       </div>
       <div class="copyright">&copy; Copyright Ping. All rights reserved.</div>
     </footer>
+
+    <script>
+      const errorEl = document.querySelector(".form__error");
+      const inputEl = document.querySelector(".form__input");
+      document.querySelector(".form").addEventListener("submit", (e) => {
+        e.preventDefault();
+        if (
+          !/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(inputEl.value)
+        ) {
+          inputEl.classList.add("form__input--error");
+          errorEl.style.display = "block";
+          errorEl.style.visibility = "visible";
+        } else {
+          inputEl.value = "";
+          inputEl.classList.remove("form__input--error");
+          errorEl.style.display = "none";
+          errorEl.style.visibility = "hidden";
+        }
+      });
+    </script>
   </body>
 </html>
