added js and hover effect

--- a/ping-coming-soon-page/final/index.html
+++ b/ping-coming-soon-page/final/index.html
@@ -76,6 +76,15 @@
         margin-bottom: 0;
       }
 
+      @media screen and (min-width: 640px) {
+        .main-section__title {
+          color: hsl(0, 0%, 59%);
+          font-size: 2.5rem;
+          font-weight: 300;
+          margin-bottom: 0;
+        }
+      }
+
       .main-section__title span {
         font-weight: 700;
         color: hsl(209, 33%, 12%);
@@ -83,7 +92,7 @@
 
       .main-section__cta {
         color: hsl(209, 33%, 12%);
-        margin: 28px 0;
+        margin: 20px 0;
       }
 
       .form {
@@ -107,8 +116,8 @@
 
       .form__input,
       .form__button {
-        border-radius: 26px;
-        height: 46px;
+        border-radius: 28px;
+        height: 50px;
         box-sizing: border-box;
       }
 
